<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">omoyeni-travel_expense</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="claims">Claims</string>
    <string name="new_expense">New Expense</string>
    <string name="name_of_claim">Name of Claim</string>
    <string name="expense">Expense</string>
    <string name="price_e_g_12_99">Price e.g. 12.99</string>
    <string name="currency_e_g_cad_usd">Currency e.g. CAD, USD</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="new_claim">New Claim</string>
    <string name="create_new_claim">Create New Claim</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="title_activity_edit_expense">EditExpenseActivity</string>
    <string name="amount_spent_e_g_195_45_only_numbers_">Amount Spent e.g. 195.45 (only numbers)</string>
    <string name="add_expense">Add Expense</string>
    <string name="name_your_expense">Name your expense</string>
    <string name="edit_expenses">Edit Expenses</string>
    <string name="edit_claim">Edit Claim</string>
    <string name="delete_claim">Delete Claim</string>
    <string name="email_claim">Email Claim</string>

</resources>
