<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.omoyeni_travel_expense.NewExpenseActivity" >

    <EditText
        android:id="@+id/addNewExpenseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:ems="10"
        android:hint="@string/name_your_expense" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/AmountTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/addNewExpenseText"
        android:layout_below="@+id/addNewExpenseText"
        android:layout_marginTop="69dp"
        android:ems="10"
        android:hint="@string/amount_spent_e_g_195_45_only_numbers_"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/CurrencyTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/AmountTextBox"
        android:layout_below="@+id/AmountTextBox"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/currency_e_g_cad_usd" />

    <Button
        android:id="@+id/addExpenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/CurrencyTextBox"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:text="@string/add_expense" />

</RelativeLayout>
